applications/icinga/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: icinga-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: icinga-tcp-listener
      protocol: TLS
      port: 5665
      tls:
        mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: icinga-api-tls-route
spec:
  hostnames:
    - icinga-master.services.sbling.net
  parentRefs:
    - name: icinga-gateway
  rules:
    - backendRefs:
        - name: icinga-icinga2
          port: 5665
